k8s/reservation-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reservation-service
  template:
    metadata:
      labels:
        app: reservation-service
    spec:
      containers:
        - name: reservation-service
          image: devops_projet-reservation-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5003
---
apiVersion: v1
kind: Service
metadata:
  name: reservation-service
spec:
  selector:
    app: reservation-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5003
  type: ClusterIP
