k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: devops.local
      http:
        paths:
          - path: /register
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - path: /login
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
          - path: /users
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 80
          
          - path: /rooms
            pathType: Prefix
            backend:
              service:
                name: salle-service
                port:
                  number: 80
          - path: /reservations
            pathType: Prefix
            backend:
              service:
                name: reservation-service
                port:
                  number: 80
